--- a/index.html
+++ b/index.html
@@ -280,10 +280,10 @@
 
 
 <!-- SECTION 5 START -->
- <div class="section5-container pt-5 bg-dark text-white mb-5">
+ <div class="section5-container pt-5 bg-dark text-white">
   <div class="container">
     <div class="section5-items d-flex justify-content-between">
-    <div class="section5Text flex-column gap-3 d-flex align-items-center justify-content-center">
+    <div class="section5Text flex-column gap-3 d-flex">
       <h1 style="font-size: 51px; font-weight: 700;">Elevate Education</h1>
       <p>Harness the power of digital assessments.</p>
       <button class="btn btn-primary" style="background-color: #008A90; width: 260px; border: 1px solid #008A90; border-radius: 8px; height: 57px;">Join Our Community</button>
@@ -316,6 +316,36 @@
 </div>
  </div>
 <!-- SECTION 5 END -->
+
+
+
+<!-- FOOTER -->
+ <footer class="bg-dark text-white">
+  <div class="footerItems d-flex justify-content-between">
+    <div class="footerAccess text-center">
+      <img src="./Assets/img/icon/heart.svg" alt="">
+      <p class="pt-2">AssessMate</p>
+    </div>
+
+    <div class="footerLinks">
+      <span class="d-flex flex-row gap-3">
+      <p>Dashboard</p>
+      <p>How It Works</p>
+      <p>Educator Hub</p>
+    </span>
+      <p>All rights reserved 2024</p>
+    </div>
+
+
+
+    <div class="socialLinks d-flex flex-row gap-3 align-items-center">
+      <img src="./Assets/img/icon/twitter.svg" alt="">
+      <img src="./Assets/img/icon/insta.svg" alt="">
+      <img src="./Assets/img/icon/linkedin.svg" alt="">
+    </div>
+  </div>
+ </footer>
+ <!-- FOOTER -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
